syntax = "proto3";

message IPLDNodeData {
  MetadataType type = 1;
  int32 linkDepth = 2;
  optional int32 size = 3;
  optional string name = 4;
  optional bytes data = 5;
}

// MetadataType defines the possible types of metadata.
enum MetadataType {
  File = 0;
  FileInlink = 1;
  FileChunk = 2;
  Folder = 3;
  FolderInlink = 4;
  Metadata = 5;
}
